<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_bg"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:scaleX=".7"
            android:scaleY=".7"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/loginLblTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:theme="@style/CustomFont"
            android:text="@string/menu"/>



        <Button
            android:id="@+id/buildingOrderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_bg"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/building_order1"
            android:textColor="@color/white"
            app:theme="@style/CustomFont"/>

        <Button
            android:id="@+id/buildingFormBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_bg"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/building_form"
            android:textColor="@color/white"
            app:theme="@style/CustomFont"/>

        <Button
            android:id="@+id/buildingEvaluationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_bg"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/building_evaluation"
            android:textColor="@color/white"
            app:theme="@style/CustomFont"/>

        <Button
            android:id="@+id/appEvaluationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_bg"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/app_evaluation"
            android:textColor="@color/white"
            app:theme="@style/CustomFont"/>



    </LinearLayout>


</RelativeLayout>