<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_bg"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:scaleX=".7"
            android:scaleY=".7"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/loginLblTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:theme="@style/CustomFont"
            android:text="@string/register"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobileNoTIL"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/mobileET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:theme="@style/CustomFont"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:shadowColor="@color/white"
                android:textColorHighlight="@color/white"
                android:gravity="right"
                android:inputType="phone"
                android:maxLines="1"
                android:hint="@string/mobile"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/veriCodeTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/verifCodeET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:theme="@style/CustomFont"
                android:textColor="@color/white"
                android:gravity="right"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/verification_code"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/regBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_bg"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:theme="@style/CustomFont"/>

        <TextView
            android:id="@+id/regMsgTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="@string/reg_msg"
            app:theme="@style/CustomFont"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"/>

    </LinearLayout>


</RelativeLayout>